WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20874
op_resolve does not do any form of caching
https://bugs.webkit.org/show_bug.cgi?id=20874
Summary
op_resolve does not do any form of caching
Oliver Hunt
Reported
2008-09-15 21:26:56 PDT
op_resolve is slower than necessary as it does no property access caching
Attachments
Patch-o-rama
(14.20 KB, patch)
2008-09-15 22:01 PDT
,
Oliver Hunt
zwarich
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2008-09-15 22:01:29 PDT
Created
attachment 23460
[details]
Patch-o-rama
Cameron Zwarich (cpst)
Comment 2
2008-09-15 22:30:30 PDT
Comment on
attachment 23460
[details]
Patch-o-rama r=me with the changes discussed on IRC
Oliver Hunt
Comment 3
2008-09-15 22:54:13 PDT
M JavaScriptCore/ChangeLog M JavaScriptCore/VM/CTI.cpp M JavaScriptCore/VM/CTI.h M JavaScriptCore/VM/CodeBlock.cpp M JavaScriptCore/VM/CodeGenerator.cpp M JavaScriptCore/VM/Machine.cpp M JavaScriptCore/VM/Machine.h M JavaScriptCore/VM/Opcode.h Committed
r36480
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug