Bug 20874: op_resolve does not do any form of caching <https://bugs.webkit.org/show_bug.cgi?id=20874>

Reviewed by Cameron Zwarich

This patch adds an op_resolve_global opcode to handle (and cache)
property lookup we can statically determine must occur on the global
object (if at all).

3% progression on sunspider, 3.2x improvement to bitops-bitwise-and, and
10% in math-partial-sums


Canonical link: https://commits.webkit.org/28769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36480 268f45cc-cd09-0410-ab3c-d52691b4dbfc